# CoinRecognition

./: .gitignore  CMakeLists.txt  Coin.cpp  Coin.h  CoinColorClassifier.cpp  CoinColorClassifier.h  CoinCounter.cpp  CoinCounter.h  Color.h  PapersheetDrawer.cpp  PapersheetDrawer.h  PapersheetExtractor.cpp  PapersheetExtractor.h  main.cpp  silver_colors.txt  yellow_colors.txt
